Add MongoDB connection details

--- a/ProductsSearch.Api/appsettings.json
+++ b/ProductsSearch.Api/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "ProductsCollectionConfig":{
+    "ConnectionString" : "",
+    "ProductsDatabaseName": "WinningGroup",
+    "ProductsCollectionName": "Products"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
