--- a/ProductsSearch.Api/ProductsSearch.Api.csproj
+++ b/ProductsSearch.Api/ProductsSearch.Api.csproj
@@ -15,6 +15,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\ProductsSearch.Core\ProductsSearch.Core.csproj" />
+      <ProjectReference Include="..\ProductsSearch.Services\ProductsSearch.Services.csproj" />
     </ItemGroup>
 
 </Project>
