--- a/ProductsSearch.Services.Tests/ProductsSearch.Services.Tests.csproj
+++ b/ProductsSearch.Services.Tests/ProductsSearch.Services.Tests.csproj
@@ -1,4 +1,4 @@
-rs<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
